Prevent the csv uploader dropzone being collapsed too far
(not less than the width of the instruction text and upload button)

--- a/src/components/side-panel/csv-uploader/csv-uploader.css
+++ b/src/components/side-panel/csv-uploader/csv-uploader.css
@@ -7,6 +7,7 @@
 }
 
 #dropzone {
+  min-width: 20rem;
   display: flex;
   justify-content: center;
   align-items: center;
